--- a/index.html
+++ b/index.html
@@ -45,19 +45,32 @@
                 <nav class="flex-nav">
                     <div>    
                         <img class="foto" src="Foto.png" type="image/png">
+                        <footer>
+                            <br><br><br><br>
+                            <div id="Redes-Sociales" class="Redes-Sociales">
+                                <a href="mailto:grovergonzalez8@gmail.com" class="Icono"></a>
+                                <a href="https://www.facebook.com/groverleonardo.gonzalezfernandez" target="_blank" class="Icono"></a>
+                                <a href="https://www.instagram.com/pibe_diferente20/" target="_blank" class="Icono"></a>
+                                <a href="https://wa.me/59164858084?text=Hola!%20Mi%20Nombre%20es:" target="_blank" class="Icono"></a>
+                            </div>
+                        </footer>
                     </div>
                 </nav>
-
-                <hr class="borde-izquierdo">
 
                 <article id="flex-article" class="flex-article">
                     <P class="parrafo-1">
                         <i> 
                         <br> Hola! 
-                        <br> Mi nombre es Grover Gonzalez.
+                        <br> Mi nombre es GROVER LEONARDO GONZALEZ FERNANDEZ.
                         <br> Soy estudiante de la carrera de Ingenieria de sistemas... 
                         <br> Actualmente, tengo 20 años
                         <br> Nací en la ciudad en Cochabamba - Bolivia
+                        <br> Disfruto mucho de las películas,
+                        <br> comer,
+                        <br> dormir,
+                        <br> meditar,
+                        <br> escuchar música,
+                        <br> y cada momento que vivo.
                         </i>
                     </P>
 
@@ -68,8 +81,14 @@
                             <i>
                                 <br>Me gusta mucho jugar Tenis, 
                                 <br>Futbol, 
-                                <br>salir con amigos... 
-                                <br>y disfrutar de la vida en todo momento!
+                                <br>salir con amigos, 
+                                <br>con la "FAMILIA",
+                                <br>tener nuevas experiencias,
+                                <br>al fin y al cabo eso es lo que importa,
+                                <br>soy una persona muy emocional,
+                                <br>LEAL y FIEL a los que me rodean,
+                                <br>principalmente a mis "PRINCIPIOS" y "VALORES",
+                                <br>"DISFRUTO" de cada momento de la vida en todo momento!
                             </i>
                         </p>
                     </div>
@@ -80,6 +99,10 @@
                         <p class="parrafo-3">
                             <i>
                                 <br>Me encanta estar en la naturaleza, 
+                                <br>Acampar conectando conmigo mismo,
+                                <br>los árboles,
+                                <br>animales,
+                                <br>sonidos,
                                 <br>inhalar y exhalar 
                                 <br>aire puro... 
                                 <br>es uno de los placeres mas bonitos de la vida!
@@ -98,14 +121,14 @@
             </video>    
         </div>
     </main>
-    <footer>
+    <!-- <footer>
         <div id="Redes-Sociales" class="Redes-Sociales">
             <a href="mailto:grovergonzalez8@gmail.com" class="Icono"></a>
             <a href="https://www.facebook.com/groverleonardo.gonzalezfernandez" target="_blank" class="Icono"></a>
             <a href="https://www.instagram.com/pibe_diferente20/" target="_blank" class="Icono"></a>
             <a href="https://wa.me/59164858084?text=Hola!%20Mi%20Nombre%20es:" target="_blank" class="Icono"></a>
         </div>
-    </footer>
+    </footer> -->
     
 </body>
 </html>
