--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <nav class="menu">
                                 <ul class="enlaces">
                                     <li> <a class="Inicio" href="#Inicio">PRESENTACION</a> </li>
-                                    <li> <a class="Contenido" href="#flex-article">ACERCA DE MI</a> </li>
+                                    <li> <a class="Contenido" href="#foto-1">ACERCA DE MI</a> </li>
                                     <li> <a class="RedesSociales" href="#Redes-Sociales">CONTACTO</a> </li>
                                 </ul>
                             </nav>
@@ -100,10 +100,16 @@
                             <br>aire puro... 
                             <br>es uno de los placeres mas bonitos de la vida!
                         </i>
+                        <br>
+                        <img id="foto-1" class="foto-1" src="foto1.jpeg" alt="FOTO CON MI ABUELITA" style="color: aqua;">
+                        <img class="foto-2" src="foto2.jpeg" alt="FOTO CON MI ABUELITO">
+                        <img class="foto-3" src="foto3.jpeg" alt="">
+                        <img class="foto-4" src="foto4.jpeg" alt="Congreso">
+                        <img class="foto-5" src="foto5.jpeg" alt="">
+                        <img class="foto-6" src="foto6.jpeg" alt="">
+                        <img class="foto-7" src="foto7.jpeg" alt="">
+                        <img class="foto-8" src="foto8.jpeg" alt="">
                     </P>
-
-                    <br><br>
-                            
                 </article>
 
             </main>  
