--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="menu">
                 <div class="itemMenu1"><a class="Inicio" href="#Inicio">PRESENTACION</a> </li>
                 </div>
-                <div class="itemMenu2"><a class="Contenido" href="#contenedor3">ACERCA DE MI</a> </li>
+                <div class="itemMenu2"><a class="Contenido" href="#contenedor3">SOBRE MI</a> </li>
                 </div>
                 <div class="itemMenu3"><a class="RedesSociales" href="#NombreYRedes">CONTACTO</a> </li>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="textoContenedor2">
                     <i class="parrafo-3">
                         <br>Me encanta estar en la naturaleza,
-                        <br>Acampar conectando conmigo mismo,
+                        <br>Acampar esuchando el sonido de la noche,
                         <br>los árboles,
                         <br>animales,
                         <br>sonidos,
