--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <h1 class="tittle">Mi Página</h1>
             </div>
             <div class="menu">
-                <div class="itemMenu1"><a class="Inicio" href="#Inicio">PRESENTACION</a> </li>
+                <div class="itemMenu1"><a class="Inicio" href="#textoPerfil">PRESENTACION</a> </li>
                 </div>
-                <div class="itemMenu2"><a class="Contenido" href="#contenedor3">SOBRE MI</a> </li>
+                <div class="itemMenu2"><a class="Contenido" href="#sliders">SOBRE MI</a> </li>
                 </div>
-                <div class="itemMenu3"><a class="RedesSociales" href="#NombreYRedes">CONTACTO</a> </li>
+                <div class="itemMenu3"><a class="RedesSociales" href="#redesSociales">CONTACTO</a> </li>
                 </div>
             </div>
             <div class="nombre">
@@ -30,7 +30,7 @@
                     <h1 id="Inicio">Grover Leonardo Gonzalez Fernandez</h1>
                 </i>
             </div>
-            <div class="redesSociales">
+            <div id="redesSociales" class="redesSociales">
                 <a href="mailto:grovergonzalez8@gmail.com" class="Icono"></a>
                 <a href="https://www.facebook.com/groverleonardo.gonzalezfernandez" target="_blank" class="Icono"></a>
                 <a href="https://www.instagram.com/pibe_diferente20/" target="_blank" class="Icono"></a>
@@ -43,7 +43,7 @@
                 <div class="fotoPerfil">
                     <center><img class="foto" src="Foto.png" type="image/png" width="70%"></center>
                 </div>
-                <div class="textoPerfil">
+                <div id="textoPerfil" class="textoPerfil">
                     <i>
                         <br> Hola!
                         <br> Mi nombre es GROVER LEONARDO GONZALEZ FERNANDEZ.
@@ -60,7 +60,7 @@
                     </i>
                 </div>
             </div>
-            <div class="contenedor1">
+            <div id="contenedor1" class="contenedor1">
                 <div class="textoContenedor1">
                     <i class="parrafo-2">
                         <br>Me gusta mucho jugar Tenis,
@@ -102,7 +102,7 @@
                 <!-- Realizar Slider -->
                 <div class="slider">
                     <center>
-                        <ul class="sliders">
+                        <ul id="sliders" class="sliders">
                             <li><img class="foto-1" src="foto1.jpeg"></li>
                             <li><img class="foto-2" src="foto2.jpeg"></li>
                             <li><img class="foto-3" src="foto3.jpeg"></li>
