--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
                         <br> Actualmente, tengo 20 años
                         <br> Nací en la ciudad en Cochabamba - Bolivia
                         <br> Disfruto mucho de las películas,
-                        <br> comer,
-                        <br> dormir,
-                        <br> meditar,
                         <br> escuchar música,
-                        <br> y cada momento que vivo.
+                        <br> y ayudar a las personas con lo que esté a mi alcance,                       
+                        <br> Actualmente ayudo a niños,
+                        <br> con la fundación "Bolivia Digna". 
+                        <br> Soy Ex-Alumno del colegio "La Salle"
+                        <br> Tengo el honor de tener el Certificado: "Experto en Seguridad Electrónica"
+                        <br> Tengo el honor de tener el Certificado: "Participación y Colaboración del 1er Congreso Lasallista de Voluntariado"
                         <br>
                     </i>
                 </div>
@@ -72,7 +74,7 @@
                         <br>soy una persona muy emocional,
                         <br>LEAL y FIEL a los que me rodean,
                         <br>principalmente a mis "PRINCIPIOS" y "VALORES",
-                        <br>"DISFRUTO" de cada momento de la vida en todo momento!
+                        <br>"DISFRUTO" de la vida en todo momento!
                         <br>
                     </i>
                 </div>
