--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <br>al fin y al cabo eso es lo que importa,
                         <br>soy una persona muy emocional,
                         <br>LEAL y FIEL a los que me rodean,
-                        <br>principalmente a mis "PRINCIPIOS" y "VALORES",
+                        <br>escencialmente a mis "PRINCIPIOS" y "VALORES",
                         <br>"DISFRUTO" de la vida en todo momento!
                         <br>
                     </i>
