--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <br> Actualmente ayudo a niños,
                         <br> con la fundación "Bolivia Digna". 
                         <br> Soy Ex-Alumno del colegio "La Salle"
-                        <br> Tengo el honor de tener el Certificado: "Experto en Seguridad Electrónica"
-                        <br> Tengo el honor de tener el Certificado: "Participación y Colaboración del 1er Congreso Lasallista de Voluntariado"
+                        <br> Tengo el honor de poseer el Certificado: "Experto en Seguridad Electrónica"
+                        <br> y tambien tengo el honor de poseer el Certificado: "Participación y Colaboración del 1er Congreso Lasallista de Voluntariado"
                         <br>
                     </i>
                 </div>
@@ -67,14 +67,15 @@
                     <i class="parrafo-2">
                         <br>Me gusta mucho jugar Tenis,
                         <br>Futbol,
+                        <br>ir al gimnasio,
                         <br>salir con amigos,
-                        <br>con la "FAMILIA",
+                        <br>con la FAMILIA,
                         <br>tener nuevas experiencias,
                         <br>al fin y al cabo eso es lo que importa,
                         <br>soy una persona muy emocional,
                         <br>LEAL y FIEL a los que me rodean,
-                        <br>escencialmente a mis "PRINCIPIOS" y "VALORES",
-                        <br>"DISFRUTO" de la vida en todo momento!
+                        <br>escencialmente a mis PRINCIPIOS y VALORES,
+                        <br>DISFRUTO de la vida en todo momento!
                         <br>
                     </i>
                 </div>
@@ -88,13 +89,12 @@
                 </div>
                 <div class="textoContenedor2">
                     <i class="parrafo-3">
-                        <br>Me encanta estar en la naturaleza,
+                        <br>Me encanta conectar con la naturaleza,
                         <br>Acampar esuchando el sonido de la noche,
                         <br>los árboles,
                         <br>animales,
-                        <br>sonidos,
-                        <br>inhalar y exhalar
-                        <br>aire puro...
+                        <br>la lluvia,
+                        <br>respirar aire puro...
                         <br>es uno de los placeres mas bonitos de la vida!
                     </i>
                 </div> 
